--- a/SampleApp/SampleApp.csproj
+++ b/SampleApp/SampleApp.csproj
@@ -5,14 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D0ADBA1F-1BAE-48F7-B090-6A36B82C28F3}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{BEEBB155-156B-4823-B8BE-126EB21D1490}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RsyncNet</RootNamespace>
-    <AssemblyName>RsyncNet</AssemblyName>
+    <RootNamespace>SampleApp</RootNamespace>
+    <AssemblyName>SampleApp</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -33,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,28 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Delta\ByteDelta.cs" />
-    <Compile Include="Delta\CopyDelta.cs" />
-    <Compile Include="Delta\DeltaGenerator.cs" />
-    <Compile Include="Delta\DeltaStatistics.cs" />
-    <Compile Include="Delta\DeltaStreamer.cs" />
-    <Compile Include="Hash\FileHash.cs" />
-    <Compile Include="Hash\HashBlockGenerator.cs" />
-    <Compile Include="Hash\HashBlock.cs" />
-    <Compile Include="Hash\HashBlockStreamer.cs" />
-    <Compile Include="Delta\IDelta.cs" />
-    <Compile Include="Libraries\HashAlgorithmWrapper.cs" />
-    <Compile Include="Libraries\IHashAlgorithm.cs" />
-    <Compile Include="Libraries\IRollingChecksum.cs" />
-    <Compile Include="Helpers\MathEx.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Libraries\RollingChecksum.cs" />
-    <Compile Include="Libraries\SlidingStreamBuffer.cs" />
-    <Compile Include="Helpers\StreamUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <ProjectReference Include="..\RsyncNet\RsyncNet.csproj">
+      <Project>{D0ADBA1F-1BAE-48F7-B090-6A36B82C28F3}</Project>
+      <Name>RsyncNet</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
